# thewhiteprotocol

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT-DEVNET.md  E2E-DEPLOYMENT-STATUS.md  E2E-TEST-FINAL-RESULTS.md  E2E-TEST-FINAL-STATUS.md  E2E-TEST-RESULTS.md  E2E-TEST-STATUS-FINAL.md  E2E-TEST-STATUS-UPDATE.md  E2E-TEST-STATUS.md  PLAN.md  README.md  REBRANDING-CHECKLIST.md  REBRANDING-CODE-CHANGES.md  REBRANDING-PLAN.md  STATUS-POOL-V8.md  WALLETS.md  WHITEPAPER-REBRAND.md  github-relayer-api-extensions.ts  github-relayer-env-example  github-relayer-index.ts  nohup.out  package-lock.json  package.json  pool.devnet.json  render.yaml  sequencer-config.json  tsconfig.base.json  vercel.json
app/: .env.example  next.config.ts  package-lock.json  package.json
chains/solana/programs/white-bridge-solana/: Cargo.toml
chains/solana/programs/white-bridge-solana/src/: bridge_message_v1.rs  lib.rs
chains/solana/programs/white-protocol/: Cargo.toml
chains/solana/programs/white-protocol/src/: error.rs  events.rs  lib.rs
chains/solana/programs/white-protocol/src/bridge/: attestation.rs  message_v1.rs  mod.rs
chains/solana/programs/white-protocol/src/crypto/: alt_bn128.rs  alt_bn128.rs.backup_fix_20260112_000312  groth16.rs  keccak.rs  mod.rs  poseidon.rs  poseidon_bn254_constants.in.rs  poseidon_bn254_constants_fr.in.rs  precomputed_zeros.rs  public_inputs.rs  verification_keys.rs
chains/solana/programs/white-protocol/src/instructions/: batch_process_deposits.rs  bridge_mint.rs  bridge_v1_accept_mint.rs  bridge_v1_freeze_message.rs  bridge_v1_init_config.rs  bridge_v1_init_outbox.rs  bridge_v1_set_asset.rs  bridge_v1_set_global_pause.rs  bridge_v1_set_route.rs  bridge_v1_set_signer_set.rs  bridge_withdraw.rs  deposit_masp.rs  initialize_bridge_config.rs  initialize_pool_v2.rs  manage_yield_mints.rs  mod.rs  private_transfer.rs  prove_membership.rs  set_feature_flags.rs  set_verification_key_chunked.rs  set_verification_key_v2.rs  settle_deposits_batch.rs  withdraw_masp.rs  withdraw_v2.rs  withdraw_yield_v2.rs
chains/solana/programs/white-protocol/src/instructions/admin/: authority_v2.rs  clear_pending.rs  mod.rs  pause_v2.rs  reset_merkle.rs  unpause_v2.rs
chains/solana/programs/white-protocol/src/instructions/compliance/: attach_metadata.rs  configure_compliance.rs
chains/solana/programs/white-protocol/src/instructions/relayer/: configure_registry.rs  deactivate_relayer.rs  register_relayer.rs
chains/solana/programs/white-protocol/src/state/: asset_vault.rs  bridge_asset_config.rs  bridge_config.rs  bridge_consumed_message.rs  bridge_frozen_message.rs  bridge_route_config.rs  bridge_signer_set.rs  bridge_v1_config.rs  commitment_index.rs  merkle_tree.rs  mod.rs  pending_deposits.rs  relayer.rs  spent_nullifier.rs  yield_registry.rs
chains/solana/programs/white-protocol/src/utils/: mod.rs
chains/solana/programs/white-protocol/tests/: poseidon_vectors_test.rs
circuits/: build.sh  compute_commitment.mjs  compute_zeros.mjs  generate_rust_vk.mjs  manifest.json  merkle_tree.circom  real_test.json  test_proof.json  test_proof_bytes.json
dapp/: package.json
docs/: stealth-addresses.md  stealth-integration.md
frontend/: .env.example  .gitignore  design_guidelines.md  index.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
research/solana-lz-poc/program/: Cargo.toml
research/solana-lz-poc/program/src/: lib.rs  mock_oapp.rs
(+764 files in other folders)
