[package]
name = "white-bridge-solana-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "1.18.26"

# In production, replace mock_oapp with the real crate:
# oapp = { path = ".../LayerZero-v2/packages/layerzero-v2/solana/programs/oapp" }
