[package]
name = "white-bridge-solana"
version = "0.1.0"
description = "The White Protocol Bridge - Solana OApp for LayerZero V2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
sha3 = "0.10"

[dev-dependencies]
hex = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(target_os, values(\"solana\"))",
    "cfg(target_arch, values(\"bpf\"))"
] }
